[gd_scene load_steps=9 format=3 uid="uid://bql4t7bonh67b"]

[ext_resource type="Theme" uid="uid://cgb6s4wgbu4ma" path="res://src/theme.tres" id="1_5xkjv"]
[ext_resource type="Script" path="res://src/main_menu.gd" id="1_7ui5b"]
[ext_resource type="Texture2D" uid="uid://c8mfgbygmcv18" path="res://assets/background.png" id="1_186hu"]
[ext_resource type="Texture2D" uid="uid://bkfllh02oan4o" path="res://assets/player.png" id="4_qmg6k"]
[ext_resource type="AudioStream" uid="uid://c84ojpf6ha0ga" path="res://addons/kenney_interface_sounds/confirmation_002.wav" id="5_5fau8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e0f33"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btjko"]
size = Vector2(340, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya3e1"]
size = Vector2(20, 200)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5xkjv")
script = ExtResource("1_7ui5b")

[node name="FloatingSpaceMan" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(60, 52)
motion_mode = 1

[node name="FloatingSpaceMan" type="Sprite2D" parent="FloatingSpaceMan"]
texture = ExtResource("4_qmg6k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloatingSpaceMan"]
shape = SubResource("CircleShape2D_e0f33")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(320, 200)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("1_186hu")
centered = false

[node name="Title" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 15.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "SPACE MINER"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.45
anchor_right = 0.5
anchor_bottom = 0.45
grow_horizontal = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../OptionsButton")
text = "PLAY"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../PlayButton")
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../PlayButton")
disabled = true
text = "OPTIONS"

[node name="PlayPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5fau8")

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2(160, 0)
shape = SubResource("RectangleShape2D_btjko")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls"]
position = Vector2(0, 90)
shape = SubResource("RectangleShape2D_ya3e1")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls"]
position = Vector2(320, 90)
shape = SubResource("RectangleShape2D_ya3e1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2(160, 180)
shape = SubResource("RectangleShape2D_btjko")
